<resources>
    <string name="app_name">Examen</string>
    <string name="et1">valor uno</string>
    <string name="et2">valor dos</string>
    <string name="sw1">suma</string>
    <string name="sw2">resta</string>
    <string name="sw3">multiplicacion</string>
    <string name="sw4">division</string>
    <string name="b1">calcular</string>
    <string name="b2">borrar</string>
    <string name="tv1"></string>
    <string name="tv2"></string>

</resources>
